--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<h1>Blog</h1>
 							<p class="major">Coucou ! Voici le site où vous pourrez suivre les dernières nouvelles de mon voyage jusqu'en Grèce :)</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Commencement</a></li>
 							</ul>
 						</div>
 						<div class="image">
