--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Blog</h1>
-							<p class="major">Coucou ! Voici le site où vous pourrez suivre les dernières nouvelles de mon voyage jusqu'en Grèce :)</p>
+							<p class="major">Coucou ! Voici le site où vous pourrez suivre les dernières nouvelles de mon voyage jusqu'à l'Observatoire d'Athènes en Grèce :)</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Commencement</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/croatie.jpg" alt="" />
+							<img src="images/observatoire.jpg" alt="" />
 						</div>
 					</section>
 
@@ -41,7 +41,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/croatie.jpg" alt="" />
 						</div>
 					</section>
 
