--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Blog</h1>
-							<p class="major">Coucou ! Voici le site où vous pourrez suivre les dernières nouvelles de mon voyage jusqu'à l'Observatoire d'Athènes en Grèce :)</p>
+							<p class="major">Je suis la seule rescapée du vaisseau Nova Seeker 51b. Je ne sais pas où se trouve le reste de l'équipage, ni le vaisseau, ni même ma planète d'origine, Vespera 4e. Perdue dans l'univers, je suis incertaine même de la galaxie où j'ai atterri. Cependant, je lance un message d'alerte à toutes les unités. Je continue à tenir ce journal de bord et décrirai ici ma progression à travers la planète Terre, sur le réseau de communication local appelé Internet. Mon objectif principal pour l’instant : me rendre dans l'observatoire le plus proche afin de déterminer ma position galactique.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Commencer</a></li>
 							</ul>
@@ -35,7 +35,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Croatie</h2>
-							<p>rbfhsbrdbfdk</p>
+							<p></p>
 						</div>
 						<div class="image">
 							<img src="images/croatie.jpg" alt="" />
