--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
 
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-						<div class="content">
-							<h1>Blog</h1>
-							<p class="major">Je suis la seule rescapée du vaisseau Nova Seeker 51b. Je ne sais pas où se trouve le reste de l'équipage, ni le vaisseau, ni même ma planète d'origine, Vespera 4e. Perdue dans l'univers, je suis incertaine même de la galaxie où j'ai atterri. Cependant, je lance un message d'alerte à toutes les unités. Je continue à tenir ce journal de bord et décrirai ici ma progression à travers la planète Terre, sur le réseau de communication local appelé Internet. Mon objectif principal pour l’instant : me rendre dans l'observatoire le plus proche afin de déterminer ma position galactique.</p>
-							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Commencer</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/observatoire.jpg" alt="" />
-						</div>
+					    <div class="content">
+					        <h1>Blog</h1>
+					        <p class="major">Message d'alerte à toutes les unités : je suis la seule rescapée du vaisseau <strong>Nova Seeker 51b</strong>. Je ne sais pas où se trouve le reste de l'équipage, ni le vaisseau, ni même ma planète d'origine, <strong>Vespera 4e</strong>. Perdue dans l'univers, je suis incertaine même de la galaxie où j'ai atterri. Cependant, je continue à tenir ce journal de bord et décrirai ici ma progression à travers la planète <strong>Terre</strong>, sur le réseau de communication local appelé <strong>Internet</strong>. Mon objectif principal pour l’instant : me rendre dans l'observatoire le plus proche afin de déterminer ma position galactique.</p>
+					        <ul class="actions stacked">
+					            <li><a href="#first" class="button big wide smooth-scroll-middle">Commencer</a></li>
+					        </ul>
+					    </div>
+					    <div class="image">
+					        <img src="images/observatoire.jpg" alt="" />
+					    </div>
 					</section>
+
 
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
