--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Croatie</h2>
+							<h1>Croatie</h1>
+							<h2>Jour 1</h2>
 							<p>Vu depuis l’avion, le paysage était magnifique, surtout avec les teintes bleues qui rappellent le Blue Lagoon.</p>
 							<img src="images/blue-lagoon.jpg" alt="Vu depuis l'avion" />
 							
