--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 					    <div class="content">
 					        <h1>Journal de Bord</h1>
 					        <p class="major">Message d'alerte à toutes les unités :</p>
