--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 					    <div class="content">
 					        <h1>Journal de Bord</h1>
 					        <p class="major">Message d'alerte à toutes les unités :</p>
