--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h1>Croatie</h1>
 							<h2>Jour 1</h2>
 							<p>Vu depuis l’avion, le paysage était magnifique, surtout avec les teintes bleues qui rappellent le Blue Lagoon.</p>
-							<img src="images/blue-lagoon.jpg" alt="Vu depuis l'avion" />
+							<img src="images/day1/avion.jpg" alt="Vu depuis l'avion" />
 							
 							<p>J’arrive à l’hostel, qui est vraiment super. C’est propre et bien entretenu, presque comme un hôtel, mais à un prix imbattable : 20€ la nuit (0,00006 zuli sur Venera !).</p>
 							<img src="images/hostel.jpg" alt="Hostel" />
