--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							
 							<p>J’arrive à l'hostel, super cool, très clean, comme un hôtel vraiment bien (c’est tellement pas cher : 20€ la nuit, ça fait 0,00006 zuli sur Vespera 4e!).</p>						
 							<p>Je vais chercher à manger, et je me mets à cuisiner dans la cuisine. Y a deux filles qui viennent me parler, c’est des Néo-Zélandaises, elles sont super cool. On mange ensemble, et y a un Américain qui nous rejoint. J’avais acheté un star fruit (psk mon but c’est tester tous les fruits des différents pays) qui s'appelle en fait un carambole, et on le partage, 10/10.
-							<img src="images/day1/star-fruit.jpg" alt="starfruit.jpg" />
+							<img src="images/day1/starfruit.jpg" alt="starfruit.jpg" />
 								
 							<p>Et puis on joue aux cartes, j’ai appris deux nouveaux jeux de cartes trop bien (que faut que je note ici parce qu'après je me souviendrais plus des règles).</p>
 							<img src="images/day1/cartes.jpg" alt="Jeu de cartes" />
