--- a/index.html
+++ b/index.html
@@ -65,9 +65,17 @@
 						        <div style="display: flex; align-items: center;">
 							    <img src="images/day2/chat.jpg" alt="starfruit" width="30%" />
 							</div>
+							
+							<div style="display: flex; align-items: center;">
+							    <video width="30%" controls>
+							        <source src="images/day2/chat.mp4" type="video/mp4">
+							    </video>
+							</div>
+
 							<p>Mais on finit par trouver une plage de dingue, donc on se pose et on se baigne. L’eau est bonne (22-23 degrés, je dirais), et là on commence à parler de tout et de rien et on se rend compte qu'on a plein de points communs et on s’entend vraiment super bien (on avait aussi déjà plein d’idées de trucs à faire pour les jours à venir, parce qu'elle se retrouve toute seule et moi aussi). Bref, la nuit tombe, donc on va visiter la vieille ville de Split et manger des carbonara.</p>
 							<div style="display: flex; align-items: center;">
-							    <img src="images/day2/plage.jpg" alt="lit" width="30%" />
+							    <img src="images/day2/plage.jpg" alt="Plage" width="30%" />								
+							    <img src="images/day2/sunset.jpg" alt="Coucher de soleil" width="30%" />								
 							</div>
 						</div>
 					</section>
