--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 							<div style="display: flex; align-items: center;">
 							    <video width="30%" controls>
 							        <source src="images/day2/chat.mp4" type="video/mp4">
+								<p style="margin-left: 10px;">Petit chat mignon</p>
 							    </video>
 							</div>
 
