--- a/index.html
+++ b/index.html
@@ -74,6 +74,26 @@
 							    <img src="images/day2/plage.jpg" alt="Plage" width="30%" />								
 							    <img src="images/day2/sunset.jpg" alt="Coucher de soleil" width="30%" />								
 							</div>
+							<p></p>
+							<p></p>
+							<h2>Jour 3</h2>
+							<p>Aujourd’hui, on s’est levées tôt avec Amber et on est allées chercher des pelotes pour le voyage de la journée, hihi, parce qu’aujourd’hui la destination du jour, c'est le parc national de KrKa !!!</p>
+							<div style="display: flex; align-items: center;">
+							    <img src="images/day3/pelotes.jpg" alt="pelote" width="30%" />
+							</div>
+							<p>Après le bus et le bateau, on arrive au parc et c'était INCROYABLE, je ne mens pas, c’est sincèrement un des plus beaux endroits du monde que j’ai vus (on n’a pas ça sur Vespera 4e).</p>
+							<div style="display: flex; align-items: center;">
+							    <img src="images/day3/krka.jpg" alt="krka" width="30%" />
+							    <img src="images/day3/krka2.jpg" alt="krka2" width="30%" />	
+							</div>
+							<p>On fait une bonne heure de randonnée, puis on se pose au spot le plus beau et on mange, puis on fait un peu de crochet et il y a un chat qui vient s’asseoir avec nous, c’était dingue.</p>
+							<div style="display: flex; align-items: center;">
+							    <img src="images/day3/crochet.jpg" alt="crochet" width="30%" />
+							</div>
+							<p>Puis on repart en rando et on rentre, et on a fait du poulet thaï incroyable. Elle est trop cool, Amber, et elle déménage en Angleterre à la fin de son voyage. J’ai déjà prévu d’aller la voir fin novembre et elle doit venir en France à un moment. :)</p>
+							<div style="display: flex; align-items: center;">
+							    <img src="images/day3/poulet.jpg" alt="poulet" width="30%" />
+							</div>
 						</div>
 					</section>
 
