--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							</div>
 							<p>Puis on repart en rando et on rentre, et on a fait du poulet thaï incroyable. Elle est trop cool, Amber, et elle déménage en Angleterre à la fin de son voyage. J’ai déjà prévu d’aller la voir fin novembre et elle doit venir en France à un moment. :)</p>
 							<div style="display: flex; align-items: center;">
-							    <img src="images/day3/poulet.jpg" alt="poulet" width="30%" />
+							    <img src="images/day3/nous.jpg" alt="nous" width="30%" />
 							</div>
 						</div>
 					</section>
