--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<div style="display: flex; align-items: center;">
 							    <img src="images/day3/crochet.jpg" alt="crochet" width="30%" />
 							</div>
-							<p>Puis on repart en rando et on rentre, et on a fait du poulet thaï incroyable. Elle est trop cool, Amber, et elle déménage en Angleterre à la fin de son voyage. J’ai déjà prévu d’aller la voir fin novembre et elle doit venir en France à un moment. :)</p>
+							<p>Puis on repart en rando et on rentre, et on a fait du poulet thaï. Elle est trop cool Amber et elle déménage en Angleterre à la fin de son voyage, j’ai déjà prévu d’aller la voir fin novembre et elle doit venir en France à un moment. :)</p>
 							<div style="display: flex; align-items: center;">
 							    <img src="images/day3/nous.jpg" alt="nous" width="30%" />
 							</div>
