--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 							<div style="display: flex; align-items: center;">
 							    <img src="images/day3/krka.jpg" alt="krka" width="30%" />
 							    <img src="images/day3/krka2.jpg" alt="krka2" width="30%" />	
+							    <img src="images/day3/poisson.jpg" alt="poisson" width="30%" />
+							    <img src="images/day3/fleurs.jpg" alt="fleurs" width="30%" />	
 							</div>
 							<p>On fait une bonne heure de randonnée, puis on se pose au spot le plus beau et on mange, puis on fait un peu de crochet et il y a un chat qui vient s’asseoir avec nous, c’était dingue.</p>
 							<div style="display: flex; align-items: center;">
