--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 							<p>Après le bus et le bateau, on arrive au parc et c'était INCROYABLE, je ne mens pas, c’est sincèrement un des plus beaux endroits du monde que j’ai vus (on n’a pas ça sur Vespera 4e).</p>
 							<div style="display: flex; align-items: center;">
 							    <img src="images/day3/krka.jpg" alt="krka" width="30%" />
-							    <img src="images/day3/krka2.jpg" alt="krka2" width="30%" />	
+							    <video width="30%" controls>
+							        <source src="images/day3/krkavideo.mp4" type="video/mp4">
+							    </video>
 							    <img src="images/day3/poisson.jpg" alt="poisson" width="30%" />
 							    <img src="images/day3/fleurs.jpg" alt="fleurs" width="30%" />	
 							</div>
