--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							    <p style="margin-left: 10px;">Vu depuis l'avion</p>
 							</div>
 							
-							<p>J’arrive à l'hostel, super cool, très clean, comme un hôtel vraiment bien (c’est tellement pas cher : 20€ la nuit, ça fait 0,00006 zuli sur Vespera 4e!).</p>						
+							<p>J'ai atterri à Split, je prends le bus et j’arrive à l'hostel, super cool, très clean, comme un hôtel vraiment bien (c’est tellement pas cher : 20€ la nuit, ça fait 0,00006 zuli sur Vespera 4e!).</p>						
 							<p>Je vais chercher à manger, et je me mets à cuisiner dans la cuisine. Y a deux filles qui viennent me parler, c’est des Néo-Zélandaises, elles sont super cool. On mange ensemble, et y a un Américain qui nous rejoint. J’avais acheté un star fruit (parce que mon but c’est tester tous les fruits des différents pays) qui s'appelle en fait un carambole, et on le partage, 10/10.
 						        <div style="display: flex; align-items: center;">
 							    <img src="images/day1/starfruit.jpg" alt="starfruit" width="30%" />
@@ -97,6 +97,13 @@
 							<p>Puis on repart en rando et on rentre, et on a fait du poulet thaï. Elle est trop cool Amber et elle déménage en Angleterre à la fin de son voyage, j’ai déjà prévu d’aller la voir fin novembre et elle doit venir en France à un moment. :)</p>
 							<div style="display: flex; align-items: center;">
 							    <img src="images/day3/nous.jpg" alt="nous" width="30%" />
+							</div>
+							<p></p>
+							<p></p>
+							<h2>Jour 4</h2>
+							<p>Aujourd'hui, on change d'endroit, on va sur l'île de Hvar, à une heure en ferry de Split (là où j'étais jusqu'ici). Petit dej trop bon parce qu'on n'a plus de place dans les valises pour la nourriture, donc faut finir les œufs (les pelotes prennent trop de place).</p>
+							<div style="display: flex; align-items: center;">
+							    <img src="images/day4/petitdej.jpg" alt="dej" width="30%" />
 							</div>
 						</div>
 					</section>
