--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<div style="display: flex; align-items: center;">
 							    <img src="images/day3/krka.jpg" alt="krka" width="30%" />
 							    <img src="images/day3/poisson.jpg" alt="poisson" width="30%" />
-							    <img src="images/day3/fleurs.jpg" alt="fleurs" width="30%" />	
+							    <img src="images/day3/fleur.jpg" alt="fleurs" width="30%" />	
 							</div>
 							<div style="display: flex; align-items: center;">
 							    <video width="30%" controls>
