--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					    <div class="content">
 					        <h1>Journal de Bord</h1>
 					        <p class="major">Message d'alerte à toutes les unités :</p>
-					        <p>Je suis la seule rescapée du vaisseau <strong>Nova Seeker 51b</strong>. Je ne sais pas où se trouve le reste de l'équipage, ni le vaisseau, ni même ma planète d'origine, <strong>Vespera 4e</strong>. Perdue dans l'univers, je suis incertaine même de la galaxie où j'ai atterri. Cependant, je continue à tenir ce journal de bord et décrirai ici ma progression à travers la planète <strong>Terre</strong>, sur le réseau de communication local appelé <strong>Internet</strong>.</p>
-					        <p><strong>Objectif principal</strong> : me rendre dans l'observatoire le plus proche afin de déterminer ma position galactique.</p>
+					        <p>Je suis la seule rescapée du vaisseau <strong>Nova Seeker 51b</strong>. Je ne sais pas où je suis et où ce trouve ma planète d'origine, <strong>Vespera 4e</strong>. Perdue dans l'univers, je suis incertaine même de la galaxie où j'ai atterri. Cependant, je continue à tenir ce journal de bord et décrirai ici ma progression à travers la planète Terre, sur le réseau de communication local Internet.</p>
+					        <p><strong>Objectif principal</strong> : me rendre dans l'observatoire le plus proche afin de déterminer ma position.</p>
 					        <ul class="actions stacked">
 					            <li><a href="#first" class="button big wide smooth-scroll-middle">Commencer</a></li>
 					        </ul>
