--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 							    <p style="margin-left: 10px;">Vu depuis l'avion</p>
 							</div>
 							
-							<p>J'ai atterri à Split, je prends le bus et j’arrive à l'hostel, super cool, très clean, comme un hôtel vraiment bien (c’est tellement pas cher : 20€ la nuit, ça fait 0,00006 zuli sur Vespera 4e!).</p>						
-							<p>Je vais chercher à manger, et je me mets à cuisiner dans la cuisine. Y a deux filles qui viennent me parler, c’est des Néo-Zélandaises, elles sont super cool. On mange ensemble, et y a un Américain qui nous rejoint. J’avais acheté un star fruit (parce que mon but c’est tester tous les fruits des différents pays) qui s'appelle en fait un carambole, et on le partage, 10/10.
+							<p>J'ai atterri à Split, le 25 septembre 2024, j'ai pris le bus et je suis arrivée à l'hostel, super cool, très clean, comme un hôtel vraiment bien (c’est tellement pas cher : 20€ la nuit, ça fait 0,00006 zuli sur Vespera 4e!).</p>						
+							<p>Je vais chercher à manger, et je me mets à cuisiner dans la cuisine et là y a deux filles qui viennent me parler, c’est des Néo-Zélandaises, elles sont super cool. On mange ensemble, et y a un Américain qui nous rejoint. J’avais acheté un star fruit (parce que mon but c’est tester tous les fruits des différents pays) qui s'appelle en fait un carambole, et on le partage, 10/10.
 						        <div style="display: flex; align-items: center;">
 							    <img src="images/day1/starfruit.jpg" alt="starfruit" width="30%" />
 							</div>
