--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<p></p>
 							<p></p>
 							<h2>Jour 2</h2>
-							<p>Le matin, je vais me balader le long de la plage. Tous mes nouveaux amis partent à part Amber. Mais elle est super cool et on prévoit de se rejoindre l'après-midi, donc je la retrouve au marché de Split. On va au parc Šuma Marjan. On se perd un peu, il y a vraiment plein de chats errants, et on joue un peu avec un, et il finit par me griffer. Je le pousse, et puis il revient et je lui dis : « C'est OK, je te pardonne, on est bons ? » Et là, je tends la main et le chat m'a TCHÉQUÉ !!!! C’était assez incroyable.</p>									
+							<p>Le matin, je suis allée me balader le long de la plage. Tous mes nouveaux amis partent à part Amber. Mais elle est super cool et on prévoit de se rejoindre l'après-midi, donc je la retrouve au marché de Split. On va au parc Šuma Marjan. On se perd un peu, il y a vraiment plein de chats errants, et on joue un peu avec un, et il finit par me griffer. Je le pousse, et puis il revient et je lui dis : « C'est OK, je te pardonne, on est bons ? » Et là, je tends la main et le chat m'a TCHECKÉ!!!! C’était assez incroyable.</p>									
 							<div style="display: flex; align-items: center;">
 							    <video width="30%" controls>
 							        <source src="images/day2/chat.mp4" type="video/mp4">
