--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 					    <div class="content">
 					        <h1>Journal de Bord</h1>
-					        <p class="major">Message d'alerte à toutes les unités :</p>
-					        <p>Je suis la seule rescapée du vaisseau <strong>Nova Seeker 51b</strong>. Je ne sais pas où je suis et où ce trouve ma planète d'origine, <strong>Vespera 4e</strong>. Perdue dans l'univers, je suis incertaine même de la galaxie où j'ai atterri. Cependant, je continue à tenir ce journal de bord et décrirai ici ma progression à travers la planète Terre, sur le réseau de communication local Internet.</p>
-					        <p><strong>Objectif principal</strong> : me rendre dans l'observatoire le plus proche afin de déterminer ma position.</p>
+					        <p class="major">Objectif: Observatoire d'Athènes</p>
 					        <ul class="actions stacked">
 					            <li><a href="#first" class="button big wide smooth-scroll-middle">Commencer</a></li>
 					        </ul>
@@ -43,7 +41,7 @@
 							    <p style="margin-left: 10px;">Vu depuis l'avion</p>
 							</div>
 							
-							<p>J'ai atterri à Split le 25 septembre 2024, j'ai pris le bus et je suis arrivée à l'hostel, super cool, très clean, comme un hôtel vraiment bien (c’est tellement pas cher : 20€ la nuit, ça fait 0,00006 zuli sur Vespera 4e!).</p>						
+							<p>J'ai atterri à Split le 25 septembre 2024, j'ai pris le bus et je suis arrivée à l'hostel, super cool, très clean, comme un hôtel vraiment bien</p>						
 							<p>Je vais chercher à manger, et je me mets à cuisiner dans la cuisine et là y a deux filles qui viennent me parler, c’est des Néo-Zélandaises, elles sont super cool. On mange ensemble, et y a un Américain qui nous rejoint. J’avais acheté un star fruit (parce que mon but c’est tester tous les fruits des différents pays) qui s'appelle en fait un carambole, et on le partage, 10/10.
 						        <div style="display: flex; align-items: center;">
 							    <img src="images/day1/starfruit.jpg" alt="starfruit" width="30%" />
@@ -79,7 +77,7 @@
 							<div style="display: flex; align-items: center;">
 							    <img src="images/day3/pelotes.jpg" alt="pelote" width="30%" />
 							</div>
-							<p>Après le bus et le bateau, on arrive au parc et c'était INCROYABLE, je ne mens pas, c’est sincèrement un des plus beaux endroits du monde que j’ai vus (on n’a pas ça sur Vespera 4e).</p>
+							<p>Après le bus et le bateau, on arrive au parc et c'était INCROYABLE, je ne mens pas, c’est sincèrement un des plus beaux endroits du monde que j’ai vus.</p>
 							<div style="display: flex; align-items: center;">
 							    <img src="images/day3/krka.jpg" alt="krka" width="30%" />
 							    <img src="images/day3/poisson.jpg" alt="poisson" width="30%" />
